--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
+# Dependencies
 node_modules
+
+# Build outputs
 dist
+build
+*.tsbuildinfo
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS files
 .DS_Store
-server/public
-vite.config.ts.*
+Thumbs.db
+*.swp
+*.swo
+*~
+
+# IDE
+.vscode
+.idea
+*.sublime-project
+*.sublime-workspace
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
 *.tar.gz
+.cache
+temp
+tmp
+
+# Server public (if generated)
+server/public
+
+# Replit files
+.replit
+.local
