--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "rest-express",
+  "name": "passkey-solana-starter",
   "version": "1.0.0",
+  "description": "A starter template for building passkey-based Solana wallets with gasless transactions using LazorKit",
   "type": "module",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/passkey-solana-starter.git"
+  },
+  "keywords": [
+    "solana",
+    "passkey",
+    "webauthn",
+    "lazorkit",
+    "wallet",
+    "gasless",
+    "react",
+    "typescript"
+  ],
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
-    "start": "NODE_ENV=production node dist/index.cjs",
+    "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -82,9 +97,6 @@
     "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.4.4",
-    "@replit/vite-plugin-dev-banner": "^0.1.1",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.1.18",
     "@types/connect-pg-simple": "^7.0.3",
@@ -99,6 +111,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.31.8",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
