--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "tsx script/build.ts",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
+    "vercel-build": "npm run build",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
